@@ -1,9 +1,13 @@
 package it.uniroma3.siw.my_restaurant.service;
 
+import java.util.ArrayList;
+import java.util.List;
+
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
 
+import it.uniroma3.siw.my_restaurant.model.Credentials;
 import it.uniroma3.siw.my_restaurant.model.User;
 import it.uniroma3.siw.my_restaurant.repository.UserRepository;
 
@@ -22,6 +26,18 @@ public class UserService {
     public User saveUser(User user) {
         return this.userRepository.save(user);
     }
+
+    @Transactional
+    public List<User> getAllUsersExceptCurrent(Credentials credentials) {
+        List<User> result = new ArrayList<>();
+        result = this.userRepository.getAllUsersExceptCurrent(credentials);
+        
+        if(result.isEmpty()) {
+            return List.of();
+        }
+
+        return result;
+        }
 
     @Transactional
     public void deleteUser(Long id){
