@@ -1,0 +1,109 @@
+<html>
+
+<head th:replace="fragments/common.html :: headerfiles(title='Dashboard | MyRestaurant')"></head>
+
+<body>
+	<header th:replace="fragments/common.html :: navbar"></header>
+	<!-- END NAV -->
+	<div class="container_body container">
+		<section class="hero is-small is-info p-4">
+			<div class="hero-body">
+				<p class="title">
+					Benvenuto <span th:text="${loggedUser.user.name}"></span>,
+				</p>
+				<p class="subtitle">
+					Gestisci il ristorante dalla tua dashboard
+				</p>
+			</div>
+		</section>
+
+		<section class="section p-4">
+			<div class="tile is-mobile is-ancestor">
+				<div class="tile is-vertical ">
+					<div class="tile has-text-centered ">
+						<div class="tile is-parent is-vertical">
+							<article class="tile is-child box has-background-grigio">
+								<p class="title is-4 has-text-">Oggi</p>
+								<p class="subtitle is-4" th:text="${date}">data</p>
+							</article>
+						</div>
+						<div class="tile is-parent">
+							<article class="tile is-child box has-background-grigio">
+								<p class="title is-4">Prenotazioni totali</p>
+								<p class="subtitle is-4" th:text="${allReservation}">100</p>
+							</article>
+						</div>
+						<div class="tile is-parent">
+							<article class="tile is-child box has-background-grigio">
+								<p class="title is-4">Ristorante</p>
+								<p class="subtitle is-4">MyRestaurant</p>
+							</article>
+						</div>
+					</div>
+					<a th:href="@{/admin/allPrenotazioni}" class="tile is-parent">
+						<article class="tile is-child box">
+							<div class="level is-mobile">
+								<div class="level-left">
+									<div class="container">
+										<p class="title is-5">Vedi prenotazioni</p>
+										<p class="subtitle is-6">Vedi la lista delle prenotazioni</p>
+									</div>
+								</div>
+								<div class="level-right">
+									<i class="fa-solid fa-chevron-right"></i>
+								</div>
+							</div>
+						</article>
+					</a>
+					<a th:href="@{/user/me}" class="tile is-parent">
+						<article class="tile is-child box">
+							<div class="level is-mobile">
+								<div class="level-left">
+									<div class="container">
+										<p class="title is-5">Modifica profilo</p>
+										<p class="subtitle is-6">Vedi la lista delle prenotazioni</p>
+									</div>
+								</div>
+								<div class="level-right">
+									<i class="fa-solid fa-chevron-right"></i>
+								</div>
+							</div>
+						</article>
+					</a>
+					<a th:href="@{/admin/allUsers}" class="tile is-parent">
+						<article class="tile is-child box">
+							<div class="level is-mobile">
+								<div class="level-left">
+									<div class="container">
+										<p class="title is-5">Vedi tutti utenti</p>
+										<p class="subtitle is-6">Vedi la lista degli utenti registrati</p>
+									</div>
+								</div>
+								<div class="level-right">
+									<i class="fa-solid fa-chevron-right"></i>
+								</div>
+							</div>
+						</article>
+					</a>
+					<a th:href="@{/logout}" class="tile is-parent">
+						<article class="tile is-danger is-child box">
+							<div class="level is-mobile">
+								<div class="level-left">
+									<div class="container">
+										<p class="title is-5 has-text-white">Logout</p>
+									</div>
+								</div>
+								<div class="level-right">
+									<i class="fa-solid fa-chevron-right"></i>
+								</div>
+							</div>
+						</article>
+					</a>
+				</div>
+			</div>
+		</section>
+	</div>
+	<footer th:replace="fragments/common.html :: footer"></footer>
+</body>
+
+</html>
