@@ -7,7 +7,7 @@
 	<!-- END NAV -->
 	<div class="container_body container">
 		<section class="hero is-medium"
-			th:style="'background-image: url(/images/image_index.jpg); background-size:cover; background-position:center;'">
+			th:style="'background-image: url(/images/my_restaurant.jpeg); background-size:cover; background-position:center;'">
 			<div class="overlay">
 				<div class="hero-body">
 
