@@ -1,0 +1,94 @@
+<html>
+
+<head th:replace="fragments/common.html :: headerfiles(title='Dashboard | MyRestaurant')"></head>
+
+<body>
+	<header th:replace="fragments/common.html :: navbar"></header>
+	<!-- END NAV -->
+	<div class="container_body container">
+		<section class="hero is-medium"
+			th:style="'background-image: url(/images/my_restaurant.jpeg);background-size:cover;background-position:center;'">
+			<div class="overlay">
+				<div class="hero-body">
+
+					<p class="title has-text-white">
+						Benvenuto <span th:text="${loggedUser.user.name}"></span>,
+					</p>
+					<p class="subtitle has-text-white">
+						Prenota ora il tuo tavolo
+					</p>
+				</div>
+			</div>
+		</section>
+
+		<section class="section p-5">
+			<div class="tile is-mobile is-ancestor">
+				<div class="tile is-vertical ">
+					<a th:href="@{/reservation}" class="tile is-parent">
+						<article class="tile has-text-white is-danger is-child box">
+							<div class="level is-mobile">
+								<div class="level-left">
+									<div class="container">
+										<p class="title is-5  has-text-white">Prenota ora</p>
+										<p class="subtitle is-6  has-text-white">Il prossimo tavolo è il tuo</p>
+									</div>
+								</div>
+								<div class="level-right">
+									<i class="fa-solid fa-chevron-right"></i>
+								</div>
+							</div>
+						</article>
+					</a>
+					<a th:href="@{/user/me}" class="tile is-parent">
+						<article class="tile  has-text-white is-danger is-child box">
+							<div class="level is-mobile">
+								<div class="level-left">
+									<div class="container">
+										<p class="title is-5  has-text-white">Modifica profilo</p>
+										<p class="subtitle is-6  has-text-white">Modifica i tuoi dati personali</p>
+									</div>
+								</div>
+								<div class="level-right">
+									<i class="fa-solid fa-chevron-right"></i>
+								</div>
+							</div>
+						</article>
+					</a>
+					<a th:href="@{/user/allPrenotazioni}" class="tile is-parent">
+						<article class="tile is-danger is-child box">
+							<div class="level is-mobile">
+								<div class="level-left">
+									<div class="container">
+										<p class="title is-5 has-text-white">Le mie prenotazioni</p>
+										<p class="subtitle is-6  has-text-white">Vedi la lista delle prenotazioni</p>
+									</div>
+								</div>
+								<div class="level-right">
+									<i class="fa-solid fa-chevron-right"></i>
+								</div>
+							</div>
+						</article>
+					</a>
+					<a th:href="@{/logout}" class="tile is-parent">
+						<article class="tile is-danger is-child box">
+							<div class="level is-mobile">
+								<div class="level-left">
+									<div class="container">
+										<p class="title is-5 has-text-white">Logout</p>
+									</div>
+								</div>
+								<div class="level-right">
+									<i class="fa-solid fa-chevron-right"></i>
+								</div>
+							</div>
+						</article>
+					</a>
+				</div>
+
+			</div>
+		</section>
+	</div>
+	<footer th:replace="fragments/common.html :: footer"></footer>
+</body>
+
+</html>
